Sat Dec 12 12:01:55 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Makefile.in, Makefile.config.in, */Makefile.in: Added target
	mostlyclean to clean up, but leave compile-intensive targets
	(e.g. db, rx code). General cleanup too.

	* htdoc/where: Updated for eventual 3.1.0b3 release.

Sat Dec 12 18:41:29 1998  Alexander Bergolth  <leo@strike.wu-wien.ac.at>

	* htmerge/words.cc: Fix last update so that it compiles on AIX.

Fri Dec 11 10:40:48 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Added additional debugging info on the
	reason for excluding a URL, based on a patch by Benoit Majeau
	<Benoit.Majeau@nrc.ca>.

	* htmerge/words.cc: Fixed a bug where pointer, rather than strings
	were assigned. Silly references...

	* htsearch/Display.cc, htsearch/Display.h: Added patch from Gilles
	to allow CGI environment variables in templates.

	* htdig/HTML.cc: Fix core dump when META refresh tags don't have
	content portions.
	
Thu Dec 10 22:28:44 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc, htdig/Server.cc, htdig/Server.h:
	Changed support for server_wait_time to use delay() method in
	Server. Delay is from beginning of last connection to this
	one. Currently this also delays local digging, which may not be ideal.

	* htcommon/defaults.cc: Added option for server_max_docs as a
	limit on the number of docs returned from a server.

	* contrib/htparsedoc/parse_word_doc.pl: New version from
	Jesse. New code speedups and better matching of punctuation.

	* htdig/Document.cc: Check http_proxy_exclude to see if it's
	empty. If so, use the proxy.
	
Mon Dec  7 21:46:34 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Fix thinko with multiple excludes and
	restricts. Pointed out by Gilles.

	* htcommon/defaults.cc: Add new option server_wait_time for the
	number of seconds to wait between requests.

	* htdig/Retriever.cc: Use server_wait_time to call sleep() before